[bumpversion]
current_version = 2.0.0
commit = True
tag = True

[aliases]
test = pytest

[metadata]
description-file = README.md

[bumpversion:file:sqlalchemy_fsm/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

